force-app/main/default/objects/EpciApiConfig__mdt/EpciApiConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration de l&apos;intégration API geo.api.gouv.fr pour le service EPCI</description>
    <label>EPCI API Config</label>
    <pluralLabel>EPCI API Configs</pluralLabel>
</CustomObject>