force-app/main/default/objects/EpciApiConfig__mdt/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <description>URL de base de l&apos;API (ex : https://geo.api.gouv.fr/epcis)</description>
    <label>URL de base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>