force-app/main/default/objects/EpciApiConfig__mdt/fields/CommuneFields__c.field-meta.xml
<CustomField>
    <fullName>CommuneFields__c</fullName>
    <description>Champs retournés pour les communes membres d&apos;un EPCI</description>
    <label>Champs communes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>