force-app/main/default/objects/EpciApiConfig__mdt/fields/CommuneLimit__c.field-meta.xml
<CustomField>
    <fullName>CommuneLimit__c</fullName>
    <description>Nombre maximum de communes retournées pour un EPCI</description>
    <label>Limite communes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>