force-app/main/default/objects/EpciApiConfig__mdt/fields/DetailFields__c.field-meta.xml
<CustomField>
    <fullName>DetailFields__c</fullName>
    <description>Champs retournés lors de la récupération du détail d&apos;un EPCI</description>
    <label>Champs de détail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>