force-app/main/default/objects/EpciApiConfig__mdt/fields/SearchFields__c.field-meta.xml
<CustomField>
    <fullName>SearchFields__c</fullName>
    <description>Champs retournés lors de la recherche par nom</description>
    <label>Champs de recherche</label>
    <length>255</length>
    <type>Text</type>
</CustomField>