force-app/main/default/objects/EpciApiConfig__mdt/fields/SearchLimit__c.field-meta.xml
<CustomField>
    <fullName>SearchLimit__c</fullName>
    <description>Nombre maximum de résultats retournés lors d&apos;une recherche</description>
    <label>Limite de recherche</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>